[START] 2nd draft

--- a/Create-Table-in-React/src/App.css
+++ b/Create-Table-in-React/src/App.css
@@ -8,9 +8,10 @@
 .container{
   border: 1px solid black;
   border-collapse: collapse;
-  width: 100%;
+  width: 1200px;
   text-align: center;
 }
+
 
 table tr{
   border-bottom: 1px solid black;
