--- a/Create-Table-in-React/src/App.css
+++ b/Create-Table-in-React/src/App.css
@@ -9,23 +9,74 @@
   border: 1px solid black;
   border-collapse: collapse;
   width: 1200px;
-  text-align: center;
+  text-align: left;
+  border-radius: 0.5rem;
+}
+.lefttitleName{
+  margin-left: 133px;
 }
 
+.lefttitleDepartment{
+  margin-left: 60px;
+}
+.righttitleTel{
+  margin-left: 64px;
+}
 
+.lefttitleMachine{
+  margin-left: 67px;
+}
+.righttitleStereo{
+  margin-left: 150px;
+}
+
+.righttitleVoicerec{
+  margin-left: 109px
+}
+
+.lefttitleObjective{
+  margin-left: 77px;
+}
+
+.lefttitleStartdate{
+  margin-left: 112px;
+}
+.righttitleEnddate{
+  margin-left: 39px;
+}
+.lefttitleLocation{
+  margin-left: 134px;
+}
+.borrowBtn{
+  margin-left: 45%;
+}
+table{
+  border-radius: 0.25rem;
+}
 table tr{
   border-bottom: 1px solid black;
-  background-color: rgb(20, 100, 147);
-  color: white;
+  background-color: rgb(58, 49, 39);
+  color: rgb(233, 247, 253);
 }
 table tr th,table tr td{
   padding: 5px;
-  padding-left: 80px;
-  padding-right: 80px;
+  padding-left: 50px;
+  padding-right: 50px;
 }
+
+.form-div form div label{
+  width: auto;
+  padding-left: 6px;
+}
+.form-div form div{
+  padding-top: 2.5px;
+  padding-bottom: 1px;
+}
+
 .form-div form{
   width: auto;
 }
+
 .form-div form input{
   width: 33.5%;
   padding: 5px;
