--- a/Create-Table-in-React/src/Read.css
+++ b/Create-Table-in-React/src/Read.css
@@ -1,7 +1,7 @@
 .readBox{
     /* display: flex; */
-  width: 750px;
-  height: 100vh;
+  width: 800px;
+  height: 90vh;
   justify-content: center;
   align-items: center;
   text-align: left;
@@ -16,9 +16,36 @@
     border-radius: 0.5rem; /* Rounded corners */
   }
 
+  .readForm {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .readForm img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    width: 70px; /* Adjust the width as needed */
+    height: auto; /* Maintain aspect ratio */
+    padding-top: 19px;
+  }
+  .readTitle {
+    margin-left: 80px;
+  }
+
   .card button{
     margin-left: 79%;
     background-color: chocolate;
+  }
+  .card h2{
+    margin-bottom: 0;
+  }
+  .card h4{
+    margin: 0;
+  }
+  .mbOne{
+    margin-left: 3.5%;
   }
 
   .button {
