--- a/Create-Table-in-React/src/App.css
+++ b/Create-Table-in-React/src/App.css
@@ -44,7 +44,7 @@
   border-radius: 0.5rem;
   background-color: #f0ebea; /* White background */
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15); /* Shadow effect */
-  height: 350px;
+  /* height: 350px; */
   margin-left: 60px;
 }
 .containertable{
@@ -101,28 +101,76 @@
 .borrowBtn{
   margin-left: 45%;
 }
-table{
+.creatable-select-wrapper label{
+  padding-left: 13% !important; /* couple react-select */
+}
+.creatable-select-wrapper .my-select{
+  padding-top: 0 !important;  /* Override the padding for the CreatableSelect wrapper */
+  padding-bottom: 0 !important;
+  padding-left: 13%;  /* couple react-select */
+}
+
+.creatable-select-wrapper .my-select__control {
+  min-height: 30px;
+  height: 30px;
+  font-size: 12px;
+  width: 200px;
+  padding-top: 0 !important;  /* Override the padding for the CreatableSelect wrapper */
+  padding-bottom: 0 !important;
+  width: 40.4%;
+}
+
+.creatable-select-wrapper .my-select__value-container {
+  padding: 0 8px;
+}
+
+.creatable-select-wrapper .my-select__input {
+  margin: 0;
+  padding: 0;
+}
+
+.creatable-select-wrapper .my-select__indicators {
+  height: 30px;
+}
+
+.creatable-select-wrapper .my-select__clear-indicator {
+  padding: 0;
+}
+
+.creatable-select-wrapper .my-select__dropdown-indicator {
+  padding: 0;
+}
+
+table {
   border-radius: 0.25rem;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15); /* Shadow effect */
-  
 }
-table tr{
+
+table tr {
   border-bottom: 1px solid black;
   background-color: rgb(58, 49, 39);
   color: rgb(233, 247, 253);
 }
-table tr th,table tr td{
+
+table tr th,
+table tr td {
   padding: 5px;
   padding-left: 50px;
   padding-right: 50px;
 }
 
-.form-div form div label{
+.form-div form div label {
   width: auto;
   padding-left: 6px;
 }
-.form-div form div{
-  padding-top: 8.5px;
+
+.form-div form .creatable-select-wrapper {
+  padding-top: 0 !important; /* Override the padding for the CreatableSelect component */
+  
+}
+
+.form-div form div {
+  padding-top: 8px;
   padding-bottom: 1px;
 }
 
@@ -141,7 +189,7 @@ table tr th,table tr td{
   padding: 5px;
 }
 .form-div form select{
-  width: 34.5%;
+  width: 34.5%;  /* sizeNUMselecter */
   padding: 5px;
   font-size: 14px;
 }
@@ -165,17 +213,33 @@ table tr th,table tr td{
   left: 0;
   width: 100%;
   background-color: #f0f0f0;
-  padding: 10px 20px;
+  padding: 5px 0px 5px 5px;
   box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.1);
-  text-align: right;
+  display: flex;
+  align-items: center;
+}
+
+.button {
+  display: inline-block;
+  padding: 10px 20px;
+  color: white;
+  background-color: blue;
+  text-decoration: none;
+  border-radius: 5px;
+  margin-right: auto; /* This pushes the signature to the right */
+}
+
+.button:hover {
+  background-color: darkblue;
 }
 
 .bottom-bar .signature {
   margin: 0;
-  padding-right: 2.5%;
   font-size: 12px;
   color: #888;
+  padding-right: 1%;
 }
+
 
 @keyframes logo-spin {
   from {
