--- a/Create-Table-in-React/src/App.css
+++ b/Create-Table-in-React/src/App.css
@@ -186,7 +186,7 @@ table tr td {
   font-size: 14px;
 }
 .form-div form button{
-  width: 10%;
+  width: 400%;
   padding: 5px;
 }
 .form-div form select{
@@ -194,6 +194,52 @@ table tr td {
   padding: 5px;
   font-size: 14px;
 }
+.borrowBtn button {
+  border: 2px solid #000; /* Black border with 2px thickness */
+  border-radius: 5px; /* Optional: To make corners rounded */
+  padding: 10px 20px; /* Optional: Adjust spacing inside the button */
+  background-color: white; /* Optional: Ensure background color contrasts with the border */
+  color: black; /* Optional: Text color */
+  cursor: pointer; /* Change the cursor to pointer for better UX */
+}
+
+.borrowBtn button:disabled {
+  border: 2px solid #f04b4b; /* Grey border for disabled state */
+  color: #ccc; /* Text color for disabled state */
+  cursor: not-allowed; /* Change cursor to indicate it's disabled */
+}
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 200px; /* Adjust width as needed */
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 5px;
+  padding: 5px 10px;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%; /* Position above the button */
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+}
+
+button:disabled {
+  cursor: not-allowed;
+}
+
 
 .logo {
   height: 6em;
