--- a/Create-Table-in-React/src/Report.css
+++ b/Create-Table-in-React/src/Report.css
@@ -6,7 +6,7 @@
     border-radius: 0.5rem;
     background-color: #f0ebea; /* White background */
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15); /* Shadow effect */
-  
+    margin-bottom: 3%;
   }
 table{
     border-radius: 0.25rem;
@@ -23,3 +23,86 @@ table tr th,table tr td{
     padding-left: 50px;
     padding-right: 50px;
   }
+
+.main-container {
+  grid-area: main;
+  overflow-y: auto;
+  padding: 20px 20px;
+  color: rgb(255, 255, 255, 0.95);
+}
+
+.main-title {
+  display: flex;
+  justify-content: space-between;
+}
+
+.main-cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 20px;
+  margin: 20px 0;
+}
+
+.card-report {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 25px;
+  border-radius: 5px;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.card-report:first-child {
+  background-color: #2962ff;
+}
+
+.card-report:nth-child(2) {
+  background-color: #ff6d00;
+}
+
+.card-report:nth-child(3) {
+  background-color: #2e7d32;
+}
+
+.card-report:nth-child(4) {
+  background-color: #d50000;
+}
+
+.card-inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.card-inner h3{
+  margin-bottom: 0;
+}
+
+.pagination button {
+  padding: 5px 10px;
+  margin: 0 5px;
+  cursor: pointer;
+}
+
+.pagination button.active {
+  font-weight: bold;
+  color: #ffffff;
+  background-color: #007bff;
+  border: none;
+}
+/* Montserrat Font */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+/* Material Icons */
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons+Outlined');
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+.material-icons-outlined {
+  vertical-align: middle;
+  line-height: 1px;
+  font-size: 35px;
+}
+.card-inner > .material-icons-outlined {
+  font-size: 45px;
+}
